# zsh-prompt

./: CMakeLists.txt  Dockerfile  Makefile
src/: CMakeLists.txt  config.h.in  term.h  zsh-prompt.c
